kube/overlays/staging/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: app-ingress
  spec:
    ingressClassName: nginx
    rules:
    # Basically would have a module in terraform that creates A records
    # in route53 specific to the PR that is being deployed to staging.
    # Longer explanation of how this would work will be written up in the README.
      - host: chainlink-$(DEPLOY_RELEASE)-client.quantumwerke-staging.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service: 
                  name: client
                  port: 
                    number: 80
              path: /
      - host: chainlink-$(DEPLOY_RELEASE)-server.quantumwerke-staging.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service: 
                  name: server
                  port: 
                    number: 3030
              path: /
    # # This section is only required if TLS is to be enabled for the Ingress
    # tls:
    #   - hosts:
    #     - www.example.com
    #     secretName: example-tls
